--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@
 
 @import "reset";
 @import "variables";
-@import "hendrix";
+
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
@@ -21,9 +21,11 @@ html {
 body {
   font: 18px/1.4 $helvetica;
   color: $darkGray;
+  background-color: purple;
 }
 
 .container {
+  background-color: transparent;
   margin: 0 auto;
   max-width: 80%;
   padding: 0 10px;
@@ -36,7 +38,6 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: $darkerGray;
   font-weight: bold;
 
   line-height: 1.7;
@@ -119,18 +120,12 @@ img {
   max-width: none;
 }
 
-/* .date is specified in sass/_hendrix.scss
-.date {
-  font-style: italic;
-  color: $gray;
-}
-*/
-
 // Specify the color of the selection
 ::-moz-selection {
   color: $black;
   background: $lightGray;
 }
+
 ::selection {
   color: $black;
   background: $lightGray;
@@ -171,33 +166,6 @@ img {
   }
 }
 
-.site-avatar {
-  float: left;
-  width: 70px;
-  height: 70px;
-  margin-right: 15px;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-
-  img {
-    border-radius: 5px;
-  }
-}
-
-.site-info {
-  float: left;
-
-  @include mobile {
-    float: none;
-    display: block;
-    margin: 0 auto;
-  }
-}
-
 .site-name {
   margin: 0;
   color: $darkGray;
@@ -208,19 +176,9 @@ img {
   letter-spacing: 1px;
 }
 
-.site-description {
-  margin: -5px 0 0 0;
-  color: $gray;
-  font-size: 16px;
 
-  @include mobile {
-    margin: 3px 0;
-  }
-}
-
-/* nav is specified in _sass/_hendrix.scss
 nav {
-  float: right;
+  text-align: center;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
@@ -235,7 +193,6 @@ nav {
   a {
     margin-left: 20px;
     color: $darkGray;
-    text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
 
@@ -244,56 +201,6 @@ nav {
       color: $blue;
     }
   }
-}
-*/
-
-//
-// .main
-//
-
-.posts > .post {
-  padding-bottom: 2em;
-  border-bottom: 1px solid $lightGray;
-}
-
-.posts > .post:last-child {
-  padding-bottom: 1em;
-  border-bottom: none;
-}
-
-.post {
-  blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
-    padding: 0.1em 1em;
-    color: $gray;
-    font-size: 22px;
-    font-style: italic;
-  }
-
-  .comments {
-    margin-top: 10px;
-  }
-
-  .read-more {
-    text-transform: uppercase;
-    font-size: 15px;
-  }
-}
-
-/*
-.wrapper-footer {
-  margin-top: 50px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
-  background-color: $lightGray;
-}
-*/
-
-footer {
-  padding: 70px 0 20px 0;
-  text-align: center;
-  border-top: 1px solid $lightGray;
 }
 
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
