--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 
 body {
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: green;
   background-color: purple;
 }
 
@@ -50,7 +50,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  text-align: center;
   font-size: 30px;
+  
   a {
     color: inherit;
   }
