--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 
 body {
   font: 18px/1.4 $helvetica;
-  color: springreen;
+  color: springgreen;
   background-color: violet;
 }
 
@@ -148,24 +148,9 @@ img {
 /* LAYOUT / SECTIONS */
 /*********************/
 
-//
-// .masthead
-//
-
-/*
-.wrapper-masthead {
-  margin-bottom: 50px;
-}
-*/
-
 .masthead {
   text-align: center;
   padding: 20px 0 50px 0;
-  border-bottom: 1px solid $lightGray;
-
-  @include mobile {
-    text-align: center;
-  }
 }
 
 .site-name {
@@ -178,8 +163,7 @@ img {
 }
 
 nav {
-  text-align: center;
-  margin-top: 23px; // @TODO: Vertically middle align
+  margin-top: 23px;
   font-family: $helveticaNeue;
   font-size: 18px;
 
@@ -191,13 +175,14 @@ nav {
   }
 
   a {
+    color: inherit;
     margin-left: 20px;
+	margin-right: 20px;
     font-weight: 300;
     letter-spacing: 1px;
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
     }
   }
 }
