--- a/style.scss
+++ b/style.scss
@@ -20,8 +20,15 @@ html {
 
 body {
   font: 18px/1.4 $helvetica;
+  color: black;
+  background-color: whitesmoke;
+}
+
+header {
   color: springgreen;
   background-color: violet;
+  text-align: center;
+  padding: 20px 0 50px 0;
 }
 
 .container {
@@ -148,10 +155,7 @@ img {
 /* LAYOUT / SECTIONS */
 /*********************/
 
-.masthead {
-  text-align: center;
-  padding: 20px 0 50px 0;
-}
+
 
 .site-name {
   margin: 0;
