--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>	    
 	    <div class="wrapper-masthead">
-			<header class="masthead clearfix">
+			<header class="clearfix">
 
 				<div class="site-info">
 					<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
