--- a/style.scss
+++ b/style.scss
@@ -26,14 +26,16 @@ body {
 
 header {
   color: springgreen;
-  background-color: {{ site.color2 }};
+  background-color: violet;
   text-align: center;
   padding: 20px 0 50px 0;
 }
 
-.container {
+#main {
   background-color: transparent;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto:
+  margin-top: 10px;
   max-width: 80%;
   padding: 0 10px;
   width: 100%;
