--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ header {
 #main {
   background-color: transparent;
   margin-left: auto;
-  margin-right: auto:
+  margin-right: auto;
   margin-top: 10px;
   max-width: 80%;
   padding: 0 10px;
