--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			</header>
 		</div>
 		
-	    <div id="main" role="main" class="container">
+	    <div id="main" role="main">
 	  		{{ content }}
 	    </div>
 		
