--- a/style.scss
+++ b/style.scss
@@ -40,6 +40,7 @@ header {
 
 #main {
   background-color: transparent;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
