--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,23 +10,24 @@
 		<link rel="stylesheet" type="text/css" href="/style.css" />
 		<!-- link href="/favicon.ico?" rel="shortcut icon" type="image/x-icon" / -->
 	</head>
-	<body>	    
-	    <div class="wrapper-masthead">
-			<header class="clearfix">
+	<body>
+		<header class="clearfix">
 
-				<div class="site-info">
-					<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
-				</div>
+			<div class="site-info">
+				<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
+			</div>
 
-				<nav>
-				{% for navlink in site.navlinks %}<a href="{{ navlink.url }}">{{ navlink.text }}</a>{% if forloop.last %}{% else %}|{% endif %}{% endfor %}
-				</nav>
-			</header>
-		</div>
+			<nav>
+			{% for navlink in site.navlinks %}<a href="{{ navlink.url }}">{{ navlink.text }}</a>{% if forloop.last %}{% else %}|{% endif %}{% endfor %}
+			</nav>
+		</header>
 		
 	    <div id="main" role="main">
 	  		{{ content }}
 	    </div>
 		
+		<footer class="clearfix">
+			{{ site.groom }} &amp; {{ site.bride }}
+		</footer>
 	</body>
 </html>
