--- a/_includes/nearby.html
+++ b/_includes/nearby.html
@@ -1,3 +1,8 @@
 <h2 id="nearby">What's Nearby?</h2>
 
-To Do
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/search?key={{ site.google_api_key }}&q=restaurants+Vandalia+OH" allowfullscreen>
+</iframe>
