--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -1,4 +1,3 @@
-
 /***************/
 /* MEYER RESET */
 /***************/
@@ -50,4 +49,16 @@ table {
 // from: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+
+// Nicolas Gallagher's micro clearfix hack
+// http://nicolasgallagher.com/micro-clearfix-hack/
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
 }
