--- a/_includes/accommodations.html
+++ b/_includes/accommodations.html
@@ -1,3 +1,8 @@
 <h2 id="accommodations">Accommodations</h2>
 
-To Do
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0" class="gmap"
+  src="https://www.google.com/maps/embed/v1/search?key={{ site.google_api_key }}&q=accommodations+Vandalia+OH" allowfullscreen>
+</iframe>
