--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,10 @@ img {
   letter-spacing: 1px;
 }
 
+.gmap {
+	border-radius: 20px;
+}
+
 nav {
   margin-top: 23px;
   font-family: $helveticaNeue;
