--- a/_includes/wedding.html
+++ b/_includes/wedding.html
@@ -1,4 +1,11 @@
 <h2 id="wedding">The Big Day</h2>
 
 August 12, 2017<br />
-St Chris, Vandalia
+St Chris, Vandalia, Ohio
+
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0" class="gmap"
+  src="https://www.google.com/maps/embed/v1/place?key={{ site.google_api_key }}&q=st+christopher+vandalia" allowfullscreen>
+</iframe>
