--- a/style.scss
+++ b/style.scss
@@ -45,6 +45,7 @@ header, footer {
   max-width: 80%;
   padding: 0 10px;
   width: 100%;
+  min-height: 500px;
   
   @include mobile {
   	max-width: 740px;
