--- a/style.scss
+++ b/style.scss
@@ -20,6 +20,7 @@ body {
   font: 18px/1.4 $helvetica;
   color: black;
   background-color: whitesmoke;
+  height: 100vh;
 }
 
 
@@ -45,7 +46,7 @@ header, footer {
   max-width: 80%;
   padding: 0 10px;
   width: 100%;
-  min-height: 500px;
+  height: 100%;
   
   @include mobile {
   	max-width: 740px;
