--- a/style.scss
+++ b/style.scss
@@ -23,6 +23,13 @@ body {
   height: 100vh;
 }
 
+header {
+  min-height: 25%;
+}
+
+footer {
+    min-height: 10%;
+}
 
 header, footer {
   color: springgreen;
@@ -46,7 +53,7 @@ header, footer {
   max-width: 80%;
   padding: 0 10px;
   width: 100%;
-  height: 100%;
+  min-height: 65%;
   
   @include mobile {
   	max-width: 740px;
