--- a/style.scss
+++ b/style.scss
@@ -14,13 +14,14 @@
 
 html {
   font-size: 100%;
+  height: 100%;
 }
 
 body {
   font: 18px/1.4 $helvetica;
   color: black;
   background-color: whitesmoke;
-  height: 100vh;
+  height: 100%;
 }
 
 header {
