--- a/style.scss
+++ b/style.scss
@@ -61,6 +61,10 @@ header, footer {
   }
 }
 
+.bridalpartyphoto {
+	border-radius: 100%;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   font-weight: bold;
