--- a/style.scss
+++ b/style.scss
@@ -14,14 +14,14 @@
 
 html {
   font-size: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
   font: 18px/1.4 $helvetica;
   color: black;
   background-color: whitesmoke;
-  height: 100%;
+  min-height: 100%;
 }
 
 header {
@@ -29,7 +29,7 @@ header {
 }
 
 footer {
-    min-height: 10%;
+   min-height: 10%;
 }
 
 header, footer {
@@ -51,10 +51,9 @@ header, footer {
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
-  max-width: 80%;
   padding: 0 10px;
-  width: 100%;
   min-height: 65%;
+  max-width: 1000px;
   
   @include mobile {
   	max-width: 740px;
