--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
   font: 18px/1.4 $helvetica;
   color: black;
   background-color: whitesmoke;
-  min-height: 100%;
+  height: 100%;
 }
 
 header {
