--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
+		<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
+		
 		<title>{{ site.groom }} &amp; {{ site.bride }}</title>
 		
 		<!--[if lt IE 9]>
