--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 sans-serif;
   color: black;
   background-color: whitesmoke;
   height: 100%;
@@ -76,7 +76,6 @@ header, footer {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: $helveticaNeue;
   font-weight: bold;
 
   line-height: 1.7;
@@ -178,7 +177,6 @@ img {
 .site-name {
   margin: 0;
   cursor: pointer;
-  font-family: $helveticaNeue;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
@@ -191,7 +189,6 @@ img {
 
 nav {
   margin-top: 23px;
-  font-family: $helveticaNeue;
   font-size: 18px;
 
   @include mobile {
