--- a/style.scss
+++ b/style.scss
@@ -34,8 +34,8 @@ footer {
 }
 
 header, footer {
-  color: springgreen;
-  background-color: violet;
+  color: #A6B175;
+  background-color: #C2A4BF;
   text-shadow:
        3px 3px 0 black,
      -1px -1px 0 black,  
