--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
 		
-		<title>{{ site.groom }} &amp; {{ site.bride }}</title>
+		<title>{{ site.groom }} &amp; {{ site.bride }} - {{ page.title }}</title>
 		
 		<!--[if lt IE 9]>
 		  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
