--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,12 @@ header, footer {
   text-align: center;
 }
 
+#countdown {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 
