--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,5 +33,7 @@
 		<footer class="clearfix">
 			{{ site.groom }} &amp; {{ site.bride }}
 		</footer>
+		
+		<div id="countdown">Countdown</div>
 	</body>
 </html>
