--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,19 +9,31 @@
 		  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 		
+		<!-- Google Analytics -->
+		<script>
+ 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  				})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  			ga('create', 'UA-74654641-1', 'auto');
+  			ga('send', 'pageview');
+		</script>
+		
+		<!-- Set the days left -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<script>
 		$(function(){
 			var date_ms = new Date("{{ site.date }}").getTime();
 			var now_ms = Date.now();
 			
-			//Get 1 day in milliseconds
+			// Get 1 day in milliseconds
   			var oneDay=1000*60*60*24;
 
 		  	// Calculate the difference in milliseconds
 		  	var difference_ms = date_ms - now_ms;
     
-  			// Convert back to days and return
+  			// Convert back to days
   			var daysLeft = Math.round(difference_ms/oneDay); 
 			
 			$("#countdown").text(daysLeft + " days left!");
