--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
 		
 		<title>{{ site.groom }} &amp; {{ site.bride }} - {{ page.title }}</title>
 		
+		{% include opengraph.html %}
+		
 		<!--[if lt IE 9]>
 		  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -16,7 +18,6 @@
 	</head>
 	<body>
 		<header class="clearfix">
-
 			<div class="site-info">
 				<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
 			</div>
@@ -28,7 +29,6 @@
 		
 	    <div id="main" role="main">
 			<h2>{{ page.title }}</h2>
-		
 	  		{{ content }}
 	    </div>
 		
