--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 		
 		<title>{{ site.groom }} &amp; {{ site.bride }} - {{ page.title }}</title>
 		
+		{% include meta.html %}
 		{% include opengraph.html %}
 		
 		<!--[if lt IE 9]>
