--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -1,16 +1,16 @@
 <!-- opengraph tags from opengraph.html -->
 <meta property="fb:admins" content="1274573288"/>
 
-<meta property="og:site_name" content="{{ site.name }}" />
-<!-- meta property="og:type" content="blog" / -->
+<meta property="og:site_name" content="{{ site.groom }} &amp; {{ site.bride }} 2017" />
+<meta property="og:type" content="website" />
 
-<meta property="article:author" content="https://www.facebook.com/joseph.hendrix.5" />
-<meta property="article:author" content="https://www.facebook.com/beth.wirick2" />
+<meta property="website:author" content="https://www.facebook.com/joseph.hendrix.5" />
+<meta property="website:author" content="https://www.facebook.com/beth.wirick2" />
 
-<meta property="article:published_time" content="{{ site.time | date: "%Y-%m-%d" }}" />
+<meta property="website:published_time" content="{{ site.time | date: "%Y-%m-%d" }}" />
 <!-- meta property="og:image" content="{{ site.url }}{{ page.image }}" / -->
 
 {% if page.url == "/index.html" %}<meta property="og:url" content="{{ site.url }}" />{% else %}<meta property="og:url" content="{{ site.url }}{{ page.url }}" />{% endif %}
 
-<meta property="og:title" content="{{ site.groom }} &amp; {{ site.bride }} - {{ page.title }}" />
+<meta property="og:title" content="{{ page.title }}" />
 <!-- meta name="description" content="" / -->
