--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -1,11 +1,12 @@
 <!-- opengraph tags from opengraph.html -->
+<meta property="fb:app_id" content="1660279814248162"/>
 <meta property="fb:admins" content="1274573288"/>
 
 <meta property="og:site_name" content="{{ site.groom }} &amp; {{ site.bride }} 2017" />
 <meta property="og:type" content="website" />
 
-<meta property="website:author" content="https://www.facebook.com/joseph.hendrix.5" />
-<meta property="website:author" content="https://www.facebook.com/beth.wirick2" />
+<!-- meta property="website:author" content="https://www.facebook.com/joseph.hendrix.5" />
+<meta property="website:author" content="https://www.facebook.com/beth.wirick2" / -->
 
 <meta property="website:published_time" content="{{ site.time | date: "%Y-%m-%d" }}" />
 <!-- meta property="og:image" content="{{ site.url }}{{ page.image }}" / -->
