--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" type="text/css" href="/style.css" />
 		<!-- link href="/favicon.ico?" rel="shortcut icon" type="image/x-icon" / -->
 	</head>
-	<body>
+	<body>{% include facebook.html %}
 		<header class="clearfix">
 			<div class="site-info">
 				<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
