--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -1,6 +1,7 @@
 <!-- opengraph tags from opengraph.html -->
 <meta property="fb:app_id" content="{{ site.fb_app_id }}"/>
 <meta property="fb:admins" content="1274573288"/>
+<meta property="fb:admins" content="1344126744"/>
 
 <meta property="og:site_name" content="{{ site.groom }} &amp; {{ site.bride }} 2017" />
 <meta property="og:type" content="website" />
