--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 			</div>
 
 			<nav>
-			{% for navlink in site.navlinks %}<a href="{{ navlink.url }}">{{ navlink.text }}</a>{% if forloop.last %}{% else %}|{% endif %}{% endfor %}
+			{% for navlink in site.navlinks %}<a href="{{ navlink.url }}">{{ navlink.text }}</a>{% unless forloop.last %}<span class="not-mobile">|</span><span class="mobile"><br /></span>{% endunless %}{% endfor %}
 			</nav>
 		</header>
 		
