--- a/style.scss
+++ b/style.scss
@@ -128,7 +128,6 @@ h3 {
 
 h4 {
   font-size: 18px;
-  color: $gray;
 }
 
 p {
@@ -136,11 +135,12 @@ p {
 }
 
 a {
-  color: $blue;
+  color: blue;
   text-decoration: none;
-	cursor: pointer;
+  cursor: pointer;
+  
   &:hover, &:active {
-    color: $blue;
+    color: blue;
   }
 }
 
