--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
 			</nav>
 		</header>
 		
-	    <div id="main" role="main">
+	    <main>
 			<h2>{{ page.title }}</h2>
 	  		{{ content }}
-	    </div>
+	    </main>
 		
 		<footer class="clearfix">
 			{{ site.groom }} &amp; {{ site.bride }}
