--- a/style.scss
+++ b/style.scss
@@ -46,7 +46,7 @@ header, footer {
   padding: 20px 0 50px 0;
 }
 
-#main {
+main {
   background-color: transparent;
   text-align: center;
   margin-left: auto;
