--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 		<![endif]-->
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		<script src="/javascript/daysLeft.js"></script>
 		
 		<link rel="stylesheet" type="text/css" href="/style.css" />
