--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
 		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		<script src="/javascript/daysLeft.js"></script>
 		
+		<link rel="stylesheet" type="text/css" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<link rel="stylesheet" type="text/css" href="/style.css" />
 		<!-- link href="/favicon.ico?" rel="shortcut icon" type="image/x-icon" / -->
 	</head>
