--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<link href='https://fonts.googleapis.com/css?family=Cinzel+Decorative:700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family={{ site.font | escape }}' rel='stylesheet' type='text/css'>
 		
 		<title>{{ site.groom }} &amp; {{ site.bride }} - {{ page.title }}</title>
 		
