--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ body {
 
 header {
   min-height: 25%;
-  font-family: 'Cinzel Decorative', cursive;
+  font-family: '{{ site.font }}', cursive;
 }
 
 footer {
