--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 	<body>{% include facebook.html %}
 		<header class="clearfix">
 			<div class="site-info">
-				<h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
+				<h1><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
 			</div>
 
 			<nav>
