--- a/style.scss
+++ b/style.scss
@@ -18,14 +18,10 @@ html {
 }
 
 body {
-  font: 18px/1.4 sans-serif;
+  font: 18px/1.4 Verdana, Geneva, sans-serif;
   color: black;
   background-color: whitesmoke;
   height: 100%;
-}
-
-header {
-  font-family: '{{ site.font }}', cursive;
 }
 
 footer {
@@ -116,6 +112,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
+  font-family: '{{ site.font }}', cursive;
   font-size: 50px;
   margin: 0;
   letter-spacing: 2px;
