moar font changes

--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-  font: 18px/1.4 Verdana, Geneva, sans-serif;
+  font: 18px/1.4 'Maven Pro', sans-serif;
   color: black;
   background-color: whitesmoke;
   height: 100%;
