--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -14,5 +14,5 @@
 
 {% if page.url == "/index.html" %}<meta property="og:url" content="{{ site.url }}" />{% else %}<meta property="og:url" content="{{ site.url }}{{ page.url }}" />{% endif %}
 
-<meta property="og:title" content="{{ page.title }}" />
-<!-- meta name="description" content="" / -->
+<meta property="og:title" content="{{ site.groom }} &amp; {{ site.bride }}" />
+<meta name="description" content="Saturday, August 12, 2017 at St. Chris, Vandalia" />
