--- a/_includes/gmap.html
+++ b/_includes/gmap.html
@@ -1,4 +1,1 @@
-<iframe
-  frameborder="0" class="gmap"
-  src="https://www.google.com/maps/embed/v1/{{ include.type }}?key={{ site.google_api_key }}&q={{ include.query }}" allowfullscreen>
-</iframe>
+<iframe frameborder="0" class="gmap" src="https://www.google.com/maps/embed/v1/{{ include.type }}?key={{ site.google_api_key }}&q={{ include.query }}" allowfullscreen></iframe>
