--- a/style.scss
+++ b/style.scss
@@ -53,7 +53,7 @@ main {
   max-width: 1000px;
   
   @include mobile {
-  	max-width: 500px;
+  	max-width: 100%;
   }
 }
 
@@ -198,7 +198,7 @@ img {
   height: 450px;
   
   @include mobile {
-	  width: 100%;
+	  width: 90%;
   }
 }
 
