--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 	<head>
 		<link href='https://fonts.googleapis.com/css?family=Maven+Pro:700|{{ site.font | url_encode }}' rel='stylesheet' type='text/css'>
 		
-		<title>{{ site.groom }} &amp; {{ site.bride }} - {{ page.title }}</title>
+		<title>{{ site.groom.first }} &amp; {{ site.bride.first }} - {{ page.title }}</title>
 		
 		{% include meta.html %}
 		{% include opengraph.html %}
@@ -20,7 +20,7 @@
 	</head>
 	<body>{% include facebook.html %}
 		<header class="clearfix">
-			<h1><a href="{{ site.baseurl }}/">{{ site.groom }} &amp; {{ site.bride }}</a></h1>
+			<h1><a href="{{ site.baseurl }}/">{{ site.groom.first }} &amp; {{ site.bride.first }}</a></h1>
 
 			<nav>
 			{% for post in site.posts %}<a href="{{ post.url }}">{{ post.title }}</a>{% unless forloop.last %}<span class="not-mobile">|</span><span class="mobile"><br /></span>{% endunless %}{% endfor %}
@@ -33,7 +33,7 @@
 	    </main>
 		
 		<footer class="clearfix">
-			{{ site.groom }} &amp; {{ site.bride }}
+			{{ site.groom.first }} &amp; {{ site.bride.first }}
 		</footer>
 		
 		<div id="countdown"></div>
