--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -3,7 +3,7 @@
 <meta property="fb:admins" content="1274573288"/>
 <meta property="fb:admins" content="1344126744"/>
 
-<meta property="og:site_name" content="{{ site.groom }} &amp; {{ site.bride }} 2017" />
+<meta property="og:site_name" content="{{ site.groom.first }} &amp; {{ site.bride.first }} 2017" />
 <meta property="og:type" content="website" />
 
 <!-- meta property="website:author" content="https://www.facebook.com/joseph.hendrix.5" />
@@ -14,5 +14,5 @@
 
 <meta property="og:url" content='{% if page.url == "/index.html" %}{{ site.url }}{% else %}{{ site.url }}{{ page.url }}{% endif %}' />
 
-<meta property="og:title" content="{{ site.groom }} &amp; {{ site.bride }}" />
+<meta property="og:title" content="{{ site.groom.first }} &amp; {{ site.bride.first }}" />
 <meta name="description" content="{{ site.date | date: '%A, %B %-d, %Y' }} at {{ site.place.name }}, {{ site.place.city }}" />
