--- a/style.scss
+++ b/style.scss
@@ -32,12 +32,12 @@ footer {
 header, footer {
   color: rgb(236, 113, 122);
   background-color: rgb(130, 112, 173);
-  text-shadow:
+  /* text-shadow:
        3px 3px 0 black,
      -1px -1px 0 black,  
       1px -1px 0 black,
       -1px 1px 0 black,
-       1px 1px 0 black;
+       1px 1px 0 black; */
   text-align: center;
   padding: 20px 0 25px 0;
 }
