--- a/_sass/_bridalParty.scss
+++ b/_sass/_bridalParty.scss
@@ -7,6 +7,7 @@
 .bridal-party {
     display: inline-block;
     width: 49%;
+	vertical-align: top;
   
     @include mobile {
         display: block;
