--- a/_sass/_bridalParty.scss
+++ b/_sass/_bridalParty.scss
@@ -2,6 +2,13 @@
     border-radius: 100%;
     display: block;
     margin: 0 auto;
+	border: 5px solid #000;
+	background: #000;
+	padding: 5px;
+}
+
+.bridal-party-photo:hover {
+	background: white;
 }
 
 .bridal-party {
@@ -14,3 +21,5 @@
         width: 100%;
     }
 }
+
+
