--- a/style.scss
+++ b/style.scss
@@ -45,9 +45,7 @@ header, footer {
 main {
   background-color: transparent;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
+  margin: 10px auto;
   padding: 0 10px;
   min-height: 65%;
   max-width: 1000px;
