--- a/_sass/_bridalParty.scss
+++ b/_sass/_bridalParty.scss
@@ -25,6 +25,9 @@
 .bridal-party div {
 	background: white;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	height: 500px;
 }
 
-
+.bridal-party p {
+	font-family: 'Dancing Script', cursive;
+}
