--- a/_sass/_bridalParty.scss
+++ b/_sass/_bridalParty.scss
@@ -22,10 +22,15 @@
     }
 }
 
+.bridal-party h3 {
+	font-family: 'Dancing Script', cursive;
+	font-size: xx-large;
+}
+
 .bridal-party div {
 	background: white;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	height: 500px;
+	max-height: 500px;
 	width: 90%;
 	margin: 0 auto;
 }
