--- a/style.scss
+++ b/style.scss
@@ -30,7 +30,7 @@ footer {
 }
 
 header, footer {
-  color: rgb(236, 113, 122);
+  color: #FFE2DE;
   background-color: rgb(130, 112, 173);
   /* text-shadow:
        3px 3px 0 black,
