--- a/_includes/opengraph.html
+++ b/_includes/opengraph.html
@@ -10,7 +10,7 @@
 <meta property="website:author" content="https://www.facebook.com/beth.wirick2" / -->
 
 <meta property="website:published_time" content="{{ site.time | date: "%Y-%m-%d" }}" />
-<!-- meta property="og:image" content="{{ site.url }}{{ page.image }}" / -->
+<meta property="og:image" content="http://www.joeandbeth2017.com/images/engagement-photo.jpg" />
 
 <meta property="og:url" content='{% if page.url == "/index.html" %}{{ site.url }}{% else %}{{ site.url }}{{ page.url }}{% endif %}' />
 
